--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,6 +4,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   </head>
   <body>
-    <h1><%= @text %></h1>
+    <% @all_users.each do |user| %>
+      <section>
+        <img src="<%= user.photo %>" />
+        <a href="users/<%= user.id %>">
+          <button>
+            <div><%= user.name %></div>
+            <div>Number of Posts: <%= user.posts_counter%></div>
+          </button>
+        </a>
+      </section>
+    <% end %>
   </body>
 </html>
