--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,22 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   </head>
   <body>
-    <h1><%= @text %></h1>
+    <section>
+      <img src="<%= @user.photo %>" />
+      <div>
+        <div><%= @user.name %></div>
+        <div>Number of Posts: <%= @user.posts_counter %></div>
+      </div>
+    </section>
+    <section>Bio: <%= @user.bio %></section>
+    <% @posts.each do |post| %>
+      <section>
+        <div><%= post.title %></div>
+        <div><%= post.text %></div>
+      </section>
+    <% end %>
+    <a href=":id/posts">
+      <button>See all posts</button>
+    </a>
   </body>
 </html>
