Fixed link issue

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
         <div><%= post.text %></div>
       </section>
     <% end %>
-    <a href=":id/posts">
+    <a href="<%= params[:id] %>/posts">
       <button>See all posts</button>
     </a>
   </body>
