--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,6 +4,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   </head>
   <body>
-    <h1><%= @text %></h1>
+    <section>
+      <div><%= @post.title %></div>
+      <div><%= @post.text %></div>
+    </section>
+    <section>
+      <% @comments.each do |comment| %>
+        <% @author = User.find(comment.author_id) %>
+        <span><%= @author.name %>:</span>
+        <span><%= comment.text %></span><br/>
+      <% end %>
+    <section>
   </body>
 </html>
