Comments and Likes counters included in users show view

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,6 +16,7 @@
       <section>
         <div><%= post.title %></div>
         <div><%= post.text %></div>
+        <div>Comments: <%= post.comments_counter %>, Likes: <%= post.likes_counter %></div>
       </section>
     <% end %>
     <a href="<%= params[:id] %>/posts">
