Added comments and likes counters for posts index view

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,6 +17,7 @@
           <div>
             <div><%= post.title %></div>
             <div><%= post.text %></div>
+            <div>Comments: <%= post.comments_counter %>, Likes: <%= post.likes_counter%></div>
           </div>
           <div>
             <% @comments = post.most_recent_comments %>
