Add comments and likes counters to posts show view

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,6 +7,7 @@
     <section>
       <div><%= @post.title %></div>
       <div><%= @post.text %></div>
+      <div>Comments: <%= @post.comments_counter %>, Likes: <%= @post.likes_counter %></div>
     </section>
     <section>
       <% @comments.each do |comment| %>
