Added user's name to posts show view

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
   </head>
   <body>
     <section>
-      <div><%= @post.title %></div>
+      <div><%= @post.title %> by <%= @user.name %></div>
       <div><%= @post.text %></div>
       <div>Comments: <%= @post.comments_counter %>, Likes: <%= @post.likes_counter %></div>
     </section>
