--- a/app/assets/stylesheets/userIndex.css
+++ b/app/assets/stylesheets/userIndex.css
@@ -7,3 +7,38 @@
   margin: 20px;
   justify-content: space-between;
 }
+
+.profile-picture {
+  width: 100px;
+  height: 100px;
+  border: 2px solid black;
+}
+
+.user-button {
+  height: 100px;
+  position: relative;
+  width: 100%;
+  text-align: left;
+  padding: 20px;
+  background-color: white;
+  border: 2px solid black;
+}
+
+.user-button:hover {
+  cursor: pointer;
+}
+
+.user-link {
+  width: calc(98% - 100px)
+}
+
+.user-name {
+  font-size: 30px;
+}
+
+.user-post-counter {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  font-size: 16px;
+}
