--- a/app/assets/stylesheets/userShow.css
+++ b/app/assets/stylesheets/userShow.css
@@ -3,3 +3,14 @@
   display: flex;
   align-items: center;
 }
+
+.bio-container {
+  margin: 20px;
+  border: 2px solid black;
+  padding: 20px;
+}
+
+.bio-heading {
+  font-size: 25px;
+  margin-bottom: 10px;
+}
