--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,10 +16,10 @@
     <div><%= @user.bio %></div>
     </section>
     <% @posts.each do |post| %>
-      <section>
-        <div><%= post.title %></div>
+      <section class="post-container">
+        <div class="post-title"><%= post.title %></div>
         <div><%= post.text %></div>
-        <div>Comments: <%= post.comments_counter %>, Likes: <%= post.likes_counter %></div>
+        <div class="counters">Comments: <%= post.comments_counter %>, Likes: <%= post.likes_counter %></div>
       </section>
     <% end %>
     <a href="<%= params[:id] %>/posts">
