--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
   <body>
     <section class="single-user">
       <img class="profile-picture" src="<%= @user.photo %>" />
-      <div class="user-button user-container">
+      <div class="user-container">
         <div class="user-name"><%= @user.name %></div>
         <div class="user-post-counter">Number of Posts: <%= @user.posts_counter %></div>
       </div>
