--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,14 +12,15 @@
       </div>
     </section>
     <% @all_posts.each do |post| %>
-      <a href="posts/<%= post.id %>">
-        <button>
-          <div>
-            <div><%= post.title %></div>
+      <a class="post-link" href="posts/<%= post.id %>">
+        <button class="post-button">
+          <div class="post-info">
+            <div class="post-title"><%= post.title %></div>
             <div><%= post.text %></div>
-            <div>Comments: <%= post.comments_counter %>, Likes: <%= post.likes_counter%></div>
+            <div class="counters">Comments: <%= post.comments_counter %>, Likes: <%= post.likes_counter%></div>
           </div>
-          <div>
+          <hr/>
+          <div class="comments-info">
             <% @comments = post.most_recent_comments %>
             <% @comments.each do |comment| %>
               <% @author = User.find(comment.author_id) %>
