Styled comments in post index view

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -31,6 +31,6 @@
         </button>
       </a>
     <% end %>
-    <button>Pagination</button>
+    <button class="pagination">Pagination</button>
   </body>
 </html>
