--- a/app/assets/stylesheets/postIndex.css
+++ b/app/assets/stylesheets/postIndex.css
@@ -19,3 +19,16 @@
   text-align: left;
   position: relative;
 }
+
+.comments-info {
+  padding: 20px;
+  text-align: left;
+  font-size: 15px;
+}
+
+.pagination {
+  background-color: lightgray;
+  border: 2px solid black;
+  padding: 5px;
+  margin-left: calc(50% - 63px);
+}
