--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Post</h1>
-<%= form_with model: @post do |f| %>
+<%= form_with model: @post, url: posts_path, method: :post, scope: :post do |f| %>
   <div>
     <%= f.label :title, "Title" %><br>
     <%= f.text_field :title %>
@@ -9,4 +9,7 @@
     <%= f.text_area :text %>
   </div>
   <%= f.submit "Create Post" %>
+<% end %>
+<% flash.each do |key, message| %>
+  <p><%= message %></p>
 <% end %>
