--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,5 +15,8 @@
         </a>
       </section>
     <% end %>
+    <div class="add-post-div">
+      <%= link_to "Add Post", new_post_path, class: "add-post" %>
+    </div>
   </body>
 </html>
