--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
 </section>
 <section class="comments-section">
   <div class="comments-heading">Comments</div>
-  <% @post.comments.includes(:author).each do |comment| %>
+  <% @post.comments.includes(:author).order(created_at: :desc).each do |comment| %>
     <span><%= comment.author.name %>:</span>
     <span><%= comment.text %></span><br/>
   <% end %>
