--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <section class="post-section">
-  <div class="post-section-title"><%= @post.title %> by <%= @user.name %></div>
+  <div class="post-section-title"><%= @post.title %> by <%= @post.author.name %></div>
   <div class="post-text"><%= @post.text %></div>
   <div class="counters">Comments: <%= @post.comments_counter %>, Likes: <%= @post.likes_counter %></div>
   <%= button_to 'Like', user_post_likes_path(@post.author, @post), method: :post %>
