--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,5 @@
 <h1>New Post</h1>
-<% flash.each do |key, message| %>
-  <div><%= message %></div>
-<% end %>
+<%= flash[:error] %>
 <%= form_with model: @post, url: posts_path, local: true, method: :post, scope: :post do |f| %>
   <div>
     <%= f.label :title, "Title" %><br>
