Styled sign out button

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -26,3 +26,4 @@
   </a>
 <% end %>
 <button class="pagination">Pagination</button>
+<%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "log-out" %>
