--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,4 +22,4 @@
 <a class="all-posts-link" href="<%= params[:id] %>/posts">
   <button class="all-posts-button">See all posts</button>
 </a>
-<%= button_to "logout", destroy_user_session_path, method: :delete  %>
+<%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "log-out" %>
