--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -24,6 +24,9 @@
       </div>
     </button>
   </a>
+  <% if can? :manage, post %>
+    <%= button_to "Delete Post", post_path(post.id), method: :delete, class: "delete-post" %>
+  <% end %>
 <% end %>
 <button class="pagination">Pagination</button>
 <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "log-out" %>
